5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4178/executions/1807_2567.log
== TEST (2019-06-13 11:11:39) 
-- CODE:
from numpy import *

num = int(input("Digite um numero:"))

bb = num * "*"

print(bb)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:13:13) 
-- CODE:
from numpy import *

num = array(eval(input("Digite um numero:")))

bb = num * "*"

for i in num:
	num = num * "*"
print(num)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:14:15) 
-- CODE:
from numpy import *

num = array(eval(input("Digite um numero:")))

bb = num * "*"

for i in num:
	num = i * "*"
print(i)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:14:39) 
-- CODE:
from numpy import *

num = array(eval(input("Digite um numero:")))

for i in num:
	num = i * "*"
print(i)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:15:30) 
-- CODE:
from numpy import *

num = array(eval(input("Digite um numero:")))

for i in range(size(num)):
	num = i * "*"
   print(i)
-- ERROR:
File "XXXX", line 7
    print(i)
           ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:15:49) 
-- CODE:
from numpy import *

num = array(eval(input("Digite um numero:")))

for i in range(size(num)):
	num = i * "*"
	print(i)
   
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:16:51) 
-- CODE:
from numpy import *

num = array(eval(input("Digite um numero:")))

for i in num:
	num = i * "*"
	print(i)
   
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:17:58) 
-- CODE:
from numpy import *

num = array(eval(input("Digite um numero:")))

for i in num:
	jj = i * "*"
	print(jj)
   
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:18:50) 
-- CODE:
from numpy import *

num = array(eval(input("Digite um numero:")))

for i in num:
	
	print(i)
   
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:20:52) 
-- CODE:
from numpy import *

num = array(eval(input("Digite um numero:")))

for i in num:
	print(i)

   
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:22:08) 
-- CODE:
from numpy import *

num = array(eval(input("Digite um numero:")))
while  num <= num:
	
   for i in num:
	print(i)

   
-- ERROR:
File "XXXX", line 7
    print(i)
           ^
TabError: inconsistent use of tabs and spaces in indentation
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
